--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,10 +3,15 @@
 version: '3'
 
 tasks:
+  test:
+    cmds:
+      - go test -v -count=1 -race -failfast ./...
+
   fix:
     cmds:
       - goimports -v -w -local "$(go list -m)" .
 
   default:
     cmds:
+      - task: test
       - task: fix
