refactor(nats, loadtest): switch to async publishing, add load test task, and update configs
Replaced synchronous `PublishMsg` with `PublishMsgAsync` in NATS adapter for improved concurrency. Introduced a new `loadtest` task and related configurations in `Taskfile.yml`. Added documentation for starting NATS and running load tests. Updated NATS connection initialization and event store logic.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -11,6 +11,14 @@ tasks:
     cmds:
       - goimports -v -w -local "$(go list -m)" .
 
+  loadtest:
+    env:
+      N: 20000  # total events
+      B: 2000   # batch size
+      BACKEND: nats
+    cmds:
+      - go run ./cmd/loadtest/
+
   default:
     cmds:
       - task: test
