feat(examples): enhance demo with event sourcing and improve CI
- Rewrite cluster-demo to use all three pillars (cluster, actor, es)
- Add Account aggregate with deposit/withdraw operations
- Show node IDs in log output to demonstrate request routing
- Add examples/README.md documenting the demo
- Run demo in both `task test` and GitHub Actions workflow

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -6,6 +6,7 @@ tasks:
   test:
     cmds:
       - go test -v -count=1 -race -failfast ./...
+      - cd examples/cluster-demo && go run .
 
   fix:
     cmds:
