--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Run tests
         run: go test -v -count=1 -race -failfast ./...
 
+      - name: Run demo
+        run: cd examples/cluster-demo && go run .
+
   release:
     needs: test
     runs-on: ubuntu-latest
