feat(examples): add counter demo and rename cluster-demo to accounting
- Rename examples/cluster-demo to examples/accounting
- Add new counter example using only Cluster + Actor (no ES)
  - HTTP API on port 8181 for interactive exploration
  - Prometheus metrics on port 2121
  - Designed for benchmarking and experimentation
- Add performance benchmarks to READMEs (~43k req/sec)
- Update CI and Taskfile references

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
         run: go test -v -count=1 -race -failfast ./...
 
       - name: Run demo
-        run: cd examples/cluster-demo && go run .
+        run: cd examples/accounting && go run .
 
   release:
     needs: test
