--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -6,7 +6,7 @@ tasks:
   test:
     cmds:
       - go test -v -count=1 -race -failfast ./...
-      - cd examples/cluster-demo && go run .
+      - cd examples/accounting && go run .
 
   fix:
     cmds:
