refactor(examples): improve loadtest with testcontainers and docs
- Add testcontainers support (no manual NATS setup needed)
- Add comprehensive README with config options and sample output
- Replace panic-based error handling with proper error returns
- Add graceful shutdown with Ctrl+C support
- Add package documentation with env var reference
- Update Taskfile path from cmd/loadtest to examples/loadtest
- Add loadtest to examples index

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -14,11 +14,11 @@ tasks:
 
   loadtest:
     env:
-      N: 20000  # total events
+      N: 20000  # total operations
       B: 2000   # batch size
       BACKEND: nats
     cmds:
-      - go run ./cmd/loadtest/
+      - go run ./examples/loadtest/
 
   default:
     cmds:
