chore: add static analysis and fix lint issues
- Add staticcheck, govulncheck to CI workflow and Taskfile
- Fix unused code: closeFunc type, Env.id field, curSeq variable
- Fix redundant nil checks before len() (S1009)
- Fix bool comparison style (S1002)
- Fix unused variable in repo_test.go (SA4006)
- Add interface compliance checks for BaseAggregate and StateTask
- Fix SnapshotOption not being appended to saveOpts

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,21 @@ jobs:
         with:
           go-version-file: go.mod
 
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
+      - name: Install govulncheck
+        run: go install golang.org/x/vuln/cmd/govulncheck@latest
+
+      - name: Run go vet
+        run: go vet ./...
+
+      - name: Run staticcheck
+        run: staticcheck ./...
+
+      - name: Run govulncheck
+        run: govulncheck ./...
+
       - name: Run tests
         run: go test -v -count=1 -race -failfast ./...
 
